<resources>
    <string name="app_name">俄罗斯方块</string>
    <string name="start_play">开始游戏</string>
    <string name="start_more">更多</string>
    <string name="game_time">游戏时间</string>
    <string name="score">游戏得分</string>
    <string name="label_next">下一个</string>
    <string name="game_over">游戏结束</string>
    <string name="restart">重新开始</string>
    <string name="record_title">记录</string>
    <string name="record_count_placeholder">共 %d 条记录</string>
</resources>