<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTimerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_time"
        android:textSize="25sp"
        android:textStyle="bold"
        android:letterSpacing="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/tvTimerLabel"
        app:layout_constraintTop_toBottomOf="@id/tvTimerLabel"
        android:layout_marginTop="2dp"/>

    <TextView
        android:id="@+id/tvScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:letterSpacing="0.1"
        android:text="@string/score"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@id/tvScoreLabel"
        app:layout_constraintTop_toBottomOf="@id/tvScoreLabel"
        android:layout_marginTop="2dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <com.example.tetris.ui.game.GameBoardView
        android:id="@+id/gameBoardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glVertical"
        app:layout_constraintTop_toBottomOf="@id/tvTimer"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/tvNextLabel"
        android:layout_width="0dp"
        android:text="@string/label_next"
        android:textSize="25sp"
        android:letterSpacing="0.1"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/glVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/gameBoardView"
        android:textAlignment="center"
        />
    <com.example.tetris.viewModel.NextBlockView
        android:id="@+id/nextBlockView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/glVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNextLabel" />

    <Button
        android:id="@+id/btnCenter"
        android:layout_width="50dp"
        android:layout_marginTop="84dp"
        android:layout_height="48dp"
        android:text="开"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/blue"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@id/glVertical"
        app:layout_constraintTop_toBottomOf="@id/nextBlockView"
        />
    <Button
        android:id="@+id/btnUp"
        android:layout_width="50dp"
        android:layout_marginTop="24dp"
        android:layout_height="48dp"
        android:text="上"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/blue"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@id/btnCenter"
        app:layout_constraintEnd_toEndOf="@id/btnCenter"
        app:layout_constraintBottom_toTopOf="@id/btnCenter"
        android:layout_marginBottom="6dp"
        />
    <Button
        android:id="@+id/btnDown"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:text="下"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/blue"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@id/btnCenter"
        app:layout_constraintEnd_toEndOf="@id/btnCenter"
        app:layout_constraintTop_toBottomOf="@id/btnCenter"
        android:layout_marginTop="6dp" />
    <Button
        android:id="@+id/btnLeft"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="左"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/blue"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@id/btnCenter"
        app:layout_constraintTop_toTopOf="@id/btnCenter"
        app:layout_constraintBottom_toBottomOf="@id/btnCenter"
        android:layout_marginEnd="6dp" />
    <Button
        android:id="@+id/btnRight"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:text="右"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/blue"
        app:backgroundTint="@null"
        app:layout_constraintStart_toEndOf="@id/btnCenter"
        app:layout_constraintTop_toTopOf="@id/btnCenter"
        app:layout_constraintBottom_toBottomOf="@id/btnCenter"
        android:layout_marginStart="6dp" />

    <Button
        android:id="@+id/btnRotate"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:text="旋转"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/blue"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@id/glVertical"
        app:layout_constraintEnd_toStartOf="@id/btnHardDrop"
        app:layout_constraintTop_toBottomOf="@id/btnDown"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp" />

    <Button
        android:id="@+id/btnHardDrop"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:text="下落"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/blue"
        app:backgroundTint="@null"
        app:layout_constraintStart_toEndOf="@id/btnRotate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnRotate"
        app:layout_constraintBottom_toBottomOf="@id/btnRotate" />

    <Button
        android:id="@+id/btnMore"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:text="更多"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/blue"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/glVertical"
        app:layout_constraintTop_toBottomOf="@id/btnRotate" />


</androidx.constraintlayout.widget.ConstraintLayout>